WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148065
Holes for find matches that span multiple lines are completely wrong
https://bugs.webkit.org/show_bug.cgi?id=148065
Summary
Holes for find matches that span multiple lines are completely wrong
Tim Horton
Reported
2015-08-16 01:51:44 PDT
Holes for find matches that span multiple lines are completely wrong
Attachments
Patch
(8.95 KB, patch)
2015-08-16 01:52 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(8.87 KB, patch)
2015-08-16 01:57 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(8.90 KB, patch)
2015-08-16 02:03 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-08-16 01:52:14 PDT
Created
attachment 259118
[details]
Patch
Tim Horton
Comment 2
2015-08-16 01:57:19 PDT
Created
attachment 259119
[details]
Patch
Tim Horton
Comment 3
2015-08-16 02:02:05 PDT
<
rdar://problem/5305002
>
Tim Horton
Comment 4
2015-08-16 02:03:18 PDT
Created
attachment 259120
[details]
Patch
Simon Fraser (smfr)
Comment 5
2015-08-17 10:39:51 PDT
Comment on
attachment 259120
[details]
Patch We should add a way to test DocumentMarkers.
Tim Horton
Comment 6
2015-08-17 10:52:35 PDT
(In reply to
comment #5
)
> Comment on
attachment 259120
[details]
> Patch > > We should add a way to test DocumentMarkers.
There is apparently a mechanism in Internals, so I'm going to try to write a test before landing.
Tim Horton
Comment 7
2015-08-17 11:12:32 PDT
With a test!:
http://trac.webkit.org/changeset/188527
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug